# justdastit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
justdastit/: __init__.py  cli.py  mcp_server.py
justdastit/core/: __init__.py  database.py  engine.py  models.py  session.py
justdastit/modules/: __init__.py  active_scanner.py  browser_spider.py  intruder.py  proxy.py  repeater.py  scanner.py  spider.py
justdastit/plugins/: __init__.py  base.py  cors_exploit.py  host_header_injection.py  open_redirect.py  subdomain_takeover.py
justdastit/utils/: __init__.py  config.py  decoder.py  reporter.py
justdastit/wordlists/: auth-bypass.txt  cmdi.txt  dirs.txt  headers.txt  lfi.txt  params.txt  sqli.txt  ssti.txt  xss.txt
tests/: conftest.py  test_database.py  test_decoder.py  test_idor_stored_xss_live.py  test_intruder.py  test_models.py  test_scanner.py  test_spider.py
